--- a/user/view/default/help/left.html
+++ b/user/view/default/help/left.html
@@ -5,25 +5,25 @@
 	<table width="100%" border="0" cellpadding="0" cellspacing="0" bgcolor="#E5E5E5">
 		<tr>
 			<td class="wid_2"></td>
-			<td class="host_l right_h" background="/user{{$STATIC}}images/lemu_over.jpg"><a href="#">新手指南</a></td>
+			<td class="host_l right_h" background="{{$STATIC}}images/lemu_over.jpg"><a href="#">新手指南</a></td>
 			<td class="wid_l"></td>
 		</tr>
 		<tr><td class="heig_l"></td></tr>
 		<tr>
 			<td class="wid_2"></td>
-			<td class="host_l right_h" background="/user{{$STATIC}}images/lemu_over.jpg"><a href="#">虚拟主机问题</a></td>
+			<td class="host_l right_h" background="{{$STATIC}}images/lemu_over.jpg"><a href="#">虚拟主机问题</a></td>
 			<td class="wid_l"></td>
 		</tr>
 		<tr><td class="heig_l"></td></tr>
 		<tr>
 			<td class="wid_2"></td>
-			<td class="host_l right_h" background="/user{{$STATIC}}images/lemu_over.jpg"><a href="#">域名问题</a></td>
+			<td class="host_l right_h" background="{{$STATIC}}images/lemu_over.jpg"><a href="#">域名问题</a></td>
 			<td class="wid_l"></td>
 		</tr>
 		<tr><td class="heig_l"></td></tr>
 		<tr>
 			<td class="wid_2"></td>
-			<td class="host_l right_h" background="/user{{$STATIC}}images/lemu_over.jpg"><a href="#">ICP备案</a></td>
+			<td class="host_l right_h" background="{{$STATIC}}images/lemu_over.jpg"><a href="#">ICP备案</a></td>
 			<td class="wid_l"></td>
 		</tr>
 		<tr><td class="heig_l"></td></tr>
