--- a/user/view/default/host/left.html
+++ b/user/view/default/host/left.html
@@ -6,26 +6,26 @@
 			<div class="left_box_host l_host_wid" align="left">
 				<table width="100%" border="0" cellpadding="0" cellspacing="0" bgcolor="#E5E5E5">
 					<tr>
-						<td class="wid_2"></td><td class="host_l right_h" background="/user{{$STATIC}}images/lemu_over.jpg">美国双线主机空间</td><td class="wid_l"></td>
+						<td class="wid_2"></td><td class="host_l right_h" background="{{$STATIC}}images/lemu_over.jpg">美国双线主机空间</td><td class="wid_l"></td>
 					</tr>
 					<tr><td class="heig_l"></td></tr>
 					<tr>
-						<td class="wid_2"></td><td class="host_l right_h" background="/user{{$STATIC}}images/lemu_over.jpg">美国双线主机空间</td><td class="wid_l"></td>
-					</tr>
-					<tr><td class="heig_l"></td></tr>
-					<tr>
-					<tr>
-						<td class="wid_2"></td><td class="host_l right_h" background="/user{{$STATIC}}images/lemu_over.jpg">美国双线主机空间</td><td class="wid_l"></td>
+						<td class="wid_2"></td><td class="host_l right_h" background="{{$STATIC}}images/lemu_over.jpg">美国双线主机空间</td><td class="wid_l"></td>
 					</tr>
 					<tr><td class="heig_l"></td></tr>
 					<tr>
 					<tr>
-						<td class="wid_2"></td><td class="host_l right_h" background="/user{{$STATIC}}images/lemu_over.jpg">美国双线主机空间</td><td class="wid_l"></td>
+						<td class="wid_2"></td><td class="host_l right_h" background="{{$STATIC}}images/lemu_over.jpg">美国双线主机空间</td><td class="wid_l"></td>
 					</tr>
 					<tr><td class="heig_l"></td></tr>
 					<tr>
 					<tr>
-						<td class="wid_2"></td><td class="host_l right_h" background="/user{{$STATIC}}images/lemu_over.jpg">美国双线主机空间</td><td class="wid_l"></td>
+						<td class="wid_2"></td><td class="host_l right_h" background="{{$STATIC}}images/lemu_over.jpg">美国双线主机空间</td><td class="wid_l"></td>
+					</tr>
+					<tr><td class="heig_l"></td></tr>
+					<tr>
+					<tr>
+						<td class="wid_2"></td><td class="host_l right_h" background="{{$STATIC}}images/lemu_over.jpg">美国双线主机空间</td><td class="wid_l"></td>
 					</tr>
 					<tr><td class="heig_l"></td></tr>
 			  </table>
