--- a/user/view/default/public/head.html
+++ b/user/view/default/public/head.html
@@ -37,38 +37,38 @@ td {font-family: Arial, Helvetica, sans-serif;font-size: 13px;}
 #table_r {width:100%; border:0px;}
 #table_news{width:680px; border:0px;}
 #table_rr {width:100%; border:0px; line-height:24px;}
-.index_bg{background-image:url(/user{{$STATIC}}images/box_tl3.jpg); background-repeat:repeat-x; width:263px;margin:0 auto; margin-bottom:0px; height:223px;}
-.left_bg_help{background-image:url(/user{{$STATIC}}images/box_tl5.jpg); background-repeat:repeat-x; width:263px;margin:0 auto; margin-bottom:0px; height:160px;}
-.left_bg_vh{background-image:url(/user{{$STATIC}}images/box_tl8.jpg); background-repeat:repeat-x; width:263px;margin:0 auto; margin-bottom:0px; height:160px;}
-.left_bg_lei{background-image:url(/user{{$STATIC}}images/box_tl8.jpg); background-repeat:repeat-x; width:263px;margin:0 auto; margin-bottom:0px; height:160px;}
-.left_bg_foot{background-image:url(/user{{$STATIC}}images/box_tl5.jpg); background-repeat:repeat-x; width:960px;margin:0 auto; margin-bottom:0px; height:120px;}
-.left_bg{background-image:url(/user{{$STATIC}}images/ne_1.jpg); background-repeat:repeat-x; width:74px; margin-top:7px; margin-left:10px; height:26px;}
-.left_vh{background-image:url(/user{{$STATIC}}images/he_cio.jpg); background-repeat:repeat-x; width:201px; margin-top:0px; margin-left:0px; height:32px;}
-.left_reg{background-image:url(/user{{$STATIC}}images/reg1.jpg); background-repeat:repeat-x; width:199px; margin-top:0px; margin-left:0px; height:396px;}
-.left_host{background-image:url(/user{{$STATIC}}images/host_cio.jpg); background-repeat:repeat-x; width:201px; margin-top:0px; margin-left:0px; height:32px;}
-.left_bg_gong{background-image:url(/user{{$STATIC}}images/box_tl4.jpg); background-repeat:repeat-x; width:74px; margin-top:5px; margin-left:140px; height:24px;}
-.left_help_img{background-image:url(/user{{$STATIC}}images/help.jpg); background-repeat:repeat-x; width:74px; margin-top:2px; margin-bottom:5px; margin-left:10px; height:26px;}
-.left_help_img2{background-image:url(/user{{$STATIC}}images/rightmenu_titlebg.gif); background-repeat:repeat-x; width:200px; margin-top:2px; margin-bottom:5px; margin-left:0px; height:30px;}
-.left_help_service{background-image:url(/user{{$STATIC}}images/help2.jpg); background-repeat:repeat-x; width:74px; margin-top:2px;  margin-bottom:5px; margin-left:10px; height:26px;}
-.left_host_vh{background-image:url(/user{{$STATIC}}images/rightmenu_titlebg.jpg); background-repeat:repeat-x; width:242px; margin-left:10px; height:33px;}
+.index_bg{background-image:url({{$STATIC}}images/box_tl3.jpg); background-repeat:repeat-x; width:263px;margin:0 auto; margin-bottom:0px; height:223px;}
+.left_bg_help{background-image:url({{$STATIC}}images/box_tl5.jpg); background-repeat:repeat-x; width:263px;margin:0 auto; margin-bottom:0px; height:160px;}
+.left_bg_vh{background-image:url({{$STATIC}}images/box_tl8.jpg); background-repeat:repeat-x; width:263px;margin:0 auto; margin-bottom:0px; height:160px;}
+.left_bg_lei{background-image:url({{$STATIC}}images/box_tl8.jpg); background-repeat:repeat-x; width:263px;margin:0 auto; margin-bottom:0px; height:160px;}
+.left_bg_foot{background-image:url({{$STATIC}}images/box_tl5.jpg); background-repeat:repeat-x; width:960px;margin:0 auto; margin-bottom:0px; height:120px;}
+.left_bg{background-image:url({{$STATIC}}images/ne_1.jpg); background-repeat:repeat-x; width:74px; margin-top:7px; margin-left:10px; height:26px;}
+.left_vh{background-image:url({{$STATIC}}images/he_cio.jpg); background-repeat:repeat-x; width:201px; margin-top:0px; margin-left:0px; height:32px;}
+.left_reg{background-image:url({{$STATIC}}images/reg1.jpg); background-repeat:repeat-x; width:199px; margin-top:0px; margin-left:0px; height:396px;}
+.left_host{background-image:url({{$STATIC}}images/host_cio.jpg); background-repeat:repeat-x; width:201px; margin-top:0px; margin-left:0px; height:32px;}
+.left_bg_gong{background-image:url({{$STATIC}}images/box_tl4.jpg); background-repeat:repeat-x; width:74px; margin-top:5px; margin-left:140px; height:24px;}
+.left_help_img{background-image:url({{$STATIC}}images/help.jpg); background-repeat:repeat-x; width:74px; margin-top:2px; margin-bottom:5px; margin-left:10px; height:26px;}
+.left_help_img2{background-image:url({{$STATIC}}images/rightmenu_titlebg.gif); background-repeat:repeat-x; width:200px; margin-top:2px; margin-bottom:5px; margin-left:0px; height:30px;}
+.left_help_service{background-image:url({{$STATIC}}images/help2.jpg); background-repeat:repeat-x; width:74px; margin-top:2px;  margin-bottom:5px; margin-left:10px; height:26px;}
+.left_host_vh{background-image:url({{$STATIC}}images/rightmenu_titlebg.jpg); background-repeat:repeat-x; width:242px; margin-left:10px; height:33px;}
 .left_top{padding-top:10px;padding-left:33px;}
 .right_reg{padding-left:33px;}
 .left_help_wid{padding-top:0px;padding-left:5px;}
 .left_host_wid{padding-top:0px;padding-left:0px;}
 .fontcolor{color:#4C4B4B;}
 .height_t{height:7px;}
-.topimg_1 {text-align:left;background:url(/user{{$STATIC}}images/help_1.jpg) 0px no-repeat;line-height:22px;padding-left:30px;}
-.topimg_2 {text-align:left;background:url(/user{{$STATIC}}images/help_2.jpg) 0px no-repeat;line-height:22px;padding-left:30px;}
-.topimg_3 {text-align:left;background:url(/user{{$STATIC}}images/help_3.jpg) 0px no-repeat;line-height:22px;padding-left:30px;}
-.topimg_4 {text-align:left;background:url(/user{{$STATIC}}images/help_4.jpg) 0px no-repeat;line-height:22px;padding-left:30px;}
-.topimg_5 {text-align:left;background:url(/user{{$STATIC}}images/help_5.jpg) 0px no-repeat;line-height:22px;padding-left:30px;}
-.topimg_6 {text-align:left;background:url(/user{{$STATIC}}images/help_6.jpg) 0px no-repeat;line-height:22px;padding-left:30px;}
-.topimg_7 {text-align:left;background:url(/user{{$STATIC}}images/help_7.jpg) 0px no-repeat;line-height:22px;padding-left:30px;}
-.topimg_8 {text-align:left;background:url(/user{{$STATIC}}images/help_8.jpg) 0px no-repeat;line-height:22px;padding-left:30px;}
-.topimg2 {text-align:left;background:url(/user{{$STATIC}}images/service_pe.jpg) 0px no-repeat;line-height:82px;height:126px;width:137px;}
-.topimg_h {text-align:left;background:url(/user{{$STATIC}}images/menu-dxt-red_bg.jpg) 0px no-repeat;line-height:30px;height:30px;width:7px;}
-.host_img {text-align:left;background:url(/user{{$STATIC}}images/ico_tuijian.gif) 0px no-repeat;line-height:22px;padding-left:30px;}
-.host_vh {text-align:left;background:url(/user{{$STATIC}}images/host_vh.jpg) 0px no-repeat;line-height:22px;padding-left:15px;}
+.topimg_1 {text-align:left;background:url({{$STATIC}}images/help_1.jpg) 0px no-repeat;line-height:22px;padding-left:30px;}
+.topimg_2 {text-align:left;background:url({{$STATIC}}images/help_2.jpg) 0px no-repeat;line-height:22px;padding-left:30px;}
+.topimg_3 {text-align:left;background:url({{$STATIC}}images/help_3.jpg) 0px no-repeat;line-height:22px;padding-left:30px;}
+.topimg_4 {text-align:left;background:url({{$STATIC}}images/help_4.jpg) 0px no-repeat;line-height:22px;padding-left:30px;}
+.topimg_5 {text-align:left;background:url({{$STATIC}}images/help_5.jpg) 0px no-repeat;line-height:22px;padding-left:30px;}
+.topimg_6 {text-align:left;background:url({{$STATIC}}images/help_6.jpg) 0px no-repeat;line-height:22px;padding-left:30px;}
+.topimg_7 {text-align:left;background:url({{$STATIC}}images/help_7.jpg) 0px no-repeat;line-height:22px;padding-left:30px;}
+.topimg_8 {text-align:left;background:url({{$STATIC}}images/help_8.jpg) 0px no-repeat;line-height:22px;padding-left:30px;}
+.topimg2 {text-align:left;background:url({{$STATIC}}images/service_pe.jpg) 0px no-repeat;line-height:82px;height:126px;width:137px;}
+.topimg_h {text-align:left;background:url({{$STATIC}}images/menu-dxt-red_bg.jpg) 0px no-repeat;line-height:30px;height:30px;width:7px;}
+.host_img {text-align:left;background:url({{$STATIC}}images/ico_tuijian.gif) 0px no-repeat;line-height:22px;padding-left:30px;}
+.host_vh {text-align:left;background:url({{$STATIC}}images/host_vh.jpg) 0px no-repeat;line-height:22px;padding-left:15px;}
 .left_dns {height:118px;width:262px;}
 .left_vip {height:121px;width:262px;}
 .left_vip2 {height:153px;width:262px;}
@@ -81,10 +81,10 @@ td {font-family: Arial, Helvetica, sans-serif;font-size: 13px;}
 
 
 .right_top{padding-top:0px;padding-right:0px;}
-.topimg3 {text-align:left;background:url(/user{{$STATIC}}images/dmain.jpg) 0px no-repeat;line-height:82px;height:223px;width:689px;}
-.host_bg {text-align:left;background:url(/user{{$STATIC}}images/r_zj.jpg) 0px no-repeat;line-height:82px;height:281px;width:689px;}
-.host_bg_vh {text-align:left;background:url(/user{{$STATIC}}images/r_zj2.jpg) 0px no-repeat;line-height:82px;height:281px;width:750px;}
-.left_host_bg {text-align:left;background:url(/user{{$STATIC}}images/leftbg.jpg) 0px no-repeat;line-height:82px;height:281px;width:689px;}
+.topimg3 {text-align:left;background:url({{$STATIC}}images/dmain.jpg) 0px no-repeat;line-height:82px;height:223px;width:689px;}
+.host_bg {text-align:left;background:url({{$STATIC}}images/r_zj.jpg) 0px no-repeat;line-height:82px;height:281px;width:689px;}
+.host_bg_vh {text-align:left;background:url({{$STATIC}}images/r_zj2.jpg) 0px no-repeat;line-height:82px;height:281px;width:750px;}
+.left_host_bg {text-align:left;background:url({{$STATIC}}images/leftbg.jpg) 0px no-repeat;line-height:82px;height:281px;width:689px;}
 .color_red{color:#FF0000;}
 .color_blue{color:#055676;}
 .color_orange{color:#D7631A;}
@@ -180,26 +180,26 @@ img{margin:0;padding:0;border:0;}
 	  		</td>
 			<td align="right"><script language="javascript" src="?c=product&a=productList&target=self"></script></td>
 		 <tr>
-			<td width="184" rowspan="2"><img src='/user{{$STATIC}}/images/logo.jpg' height="80"></td>
+			<td width="184" rowspan="2"><img src='{{$STATIC}}/images/logo.jpg' height="80"></td>
 			<td valign="top" align="left" class="right" width="500"></td><td valign="top"></td>
 		 </tr>
 	  </form>
 	  <tr>
-	  	<td colspan="2" align="right"><a href="http://zh.kanglesoft.com"><img src="/user{{$STATIC}}images/ad.gif" border="0"></a></td>
+	  	<td colspan="2" align="right"><a href="http://zh.kanglesoft.com"><img src="{{$STATIC}}images/ad.gif" border="0"></a></td>
 	  </tr>
 	  <tr>
 	  <tr>
 	    <td colspan="3">
 			<table width="100%" border="0" cellpadding="0" cellspacing="0">
 			  <tr>
-				<td width="6" height="42"><img src='/user{{$STATIC}}images/menu-home-red1.jpg'></td>
-				<td background='/user{{$STATIC}}images/menu-dxt-red2.jpg' class="right_h white">
+				<td width="6" height="42"><img src='{{$STATIC}}images/menu-home-red1.jpg'></td>
+				<td background='{{$STATIC}}images/menu-dxt-red2.jpg' class="right_h white">
 					{{foreach from=$menus item=menu}}
 					<a href="{{$menu.1}}" class="mainlevel"><b><span class="td_font white">{{$menu.0}}</span></b></a>
 					&nbsp;&nbsp;<span class="right topimg_h">&nbsp;&nbsp;</span>
 		   			{{/foreach}}	
 				</td>
-				<td width="6" height="42"><img src='/user{{$STATIC}}images/menu-home-red3.jpg'></td>
+				<td width="6" height="42"><img src='{{$STATIC}}images/menu-home-red3.jpg'></td>
 			  </tr>
 		  </table>
 		</td>
