--- a/user/view/default/help/index.html
+++ b/user/view/default/help/index.html
@@ -3,7 +3,7 @@
 	<!--帮助代码开始-->
 		<table align="right" border="0" cellpadding="0" cellspacing="0" width="750">
 			<tr>
-				<td colspan="2" background="/user{{$STATIC}}images/nav_bg.jpg" class="right_hg right fontcolor">
+				<td colspan="2" background="{{$STATIC}}images/nav_bg.jpg" class="right_hg right fontcolor">
 					当前位置 : <a href="/">首页</a> >> <a href="?c=help&a=index">使用帮助</a>
 				</td>
 			</tr>
@@ -12,7 +12,7 @@
 			  
 			   <!--提问代码开始-->
 			  <tr>
-				<td class="nblue12" background="/user{{$STATIC}}/images/dot_button.gif" height="23">
+				<td class="nblue12" background="{{$STATIC}}/images/dot_button.gif" height="23">
 					<div class="black12 right" style="CURSOR: pointer" onClick="faq('faq1.1')">1.1 问：如何注册使用空间? 
 					<span class="color_red">查看答案</span></div>
 				</td>
@@ -26,7 +26,7 @@
 			
 			<!--提问代码开始-->
 			  <tr>
-				<td class="nblue12" background="/user{{$STATIC}}/images/dot_button.gif" height="23">
+				<td class="nblue12" background="{{$STATIC}}/images/dot_button.gif" height="23">
 					<div class="black12 right" style="CURSOR: pointer" onClick="faq('faq1.2')">1.2 问：请问我如何付款?
 					<span class="color_red">查看答案</span></div>
 				</td>
@@ -45,7 +45,7 @@
 			<!--提问代码开始-->
 			
 		  <tr>
-			<td class="nblue12 right" background="/user{{$STATIC}}/images/dot_button.gif" height="23"><div class="black12" style="CURSOR: pointer" onClick="faq('faq2.1')">2.1 问：空间如何上传文件? <span class="color_red">查看答案</span></div></td>
+			<td class="nblue12 right" background="{{$STATIC}}/images/dot_button.gif" height="23"><div class="black12" style="CURSOR: pointer" onClick="faq('faq2.1')">2.1 问：空间如何上传文件? <span class="color_red">查看答案</span></div></td>
 		  </tr>
 		  <tr>
 			<td>
@@ -58,7 +58,7 @@
 		  
 		<!--提问代码开始-->
 		  <tr>
-			<td class="nblue12 right" background="/user{{$STATIC}}/images/dot_button.gif" height="23"><div class="black12" style="CURSOR: pointer" onClick="faq('faq2.2')">2.2 问：请问你们的在线安装程序，可以放上我常用的程序吗? <span class="color_red">查看答案</span></div></td>
+			<td class="nblue12 right" background="{{$STATIC}}/images/dot_button.gif" height="23"><div class="black12" style="CURSOR: pointer" onClick="faq('faq2.2')">2.2 问：请问你们的在线安装程序，可以放上我常用的程序吗? <span class="color_red">查看答案</span></div></td>
 		  </tr>
 		  <tr>
 			<td>
@@ -71,7 +71,7 @@
 		  
 		  <!--提问代码开始-->
 		  <tr>
-			<td class="nblue12 right" background="/user{{$STATIC}}/images/dot_button.gif" height="23"><div class="black12" style="CURSOR: pointer" onClick="faq('faq2.3')">2.3 问：请问我安装了在线安装程序里的discuz程序，我要换别的怎么办? <span class="color_red">查看答案</span></div></td>
+			<td class="nblue12 right" background="{{$STATIC}}/images/dot_button.gif" height="23"><div class="black12" style="CURSOR: pointer" onClick="faq('faq2.3')">2.3 问：请问我安装了在线安装程序里的discuz程序，我要换别的怎么办? <span class="color_red">查看答案</span></div></td>
 		  </tr>
 		  <tr>
 			<td>
@@ -84,7 +84,7 @@
 		  
 		 <!--提问代码开始-->
 		  <tr>
-			<td class="nblue12 right" background="/user{{$STATIC}}/images/dot_button.gif" height="23"><div class="black12" style="CURSOR: pointer" onClick="faq('faq2.4')">2.4 问：请问我的网站如何备案? <span class="color_red">查看答案</span></div></td>
+			<td class="nblue12 right" background="{{$STATIC}}/images/dot_button.gif" height="23"><div class="black12" style="CURSOR: pointer" onClick="faq('faq2.4')">2.4 问：请问我的网站如何备案? <span class="color_red">查看答案</span></div></td>
 		  </tr>
 		  <tr>
 			<td>
@@ -97,7 +97,7 @@
 		  
 		 <!--提问代码开始-->
 		  <tr>
-			<td class="nblue12 right" background="/user{{$STATIC}}/images/dot_button.gif" height="23"><div class="black12" style="CURSOR: pointer" onClick="faq('faq2.5')">2.5 问：我遇到问题如何寻求帮助？ <span class="color_red">查看答案</span></div></td>
+			<td class="nblue12 right" background="{{$STATIC}}/images/dot_button.gif" height="23"><div class="black12" style="CURSOR: pointer" onClick="faq('faq2.5')">2.5 问：我遇到问题如何寻求帮助？ <span class="color_red">查看答案</span></div></td>
 		  </tr>
 		  <tr>
 			<td>
@@ -116,7 +116,7 @@
 		  
 		  <!--提问代码开始-->
 		  <tr>
-			<td class="nblue12 right" background="/user{{$STATIC}}/images/dot_button.gif" height="23"><div class="black12" style="CURSOR: pointer" onClick="faq('faq2.6')">2.6 问：请问你们的产品可以定制我要的大小吗 <span class="color_red">查看答案</span></div></td>
+			<td class="nblue12 right" background="{{$STATIC}}/images/dot_button.gif" height="23"><div class="black12" style="CURSOR: pointer" onClick="faq('faq2.6')">2.6 问：请问你们的产品可以定制我要的大小吗 <span class="color_red">查看答案</span></div></td>
 		  </tr>
 		  <tr>
 			<td>
