--- a/user/view/default/host/index.html
+++ b/user/view/default/host/index.html
@@ -1,7 +1,7 @@
 <div class="wid_menu_vh">
   <table width="750" border="0" cellpadding="0" cellspacing="0" align="center">
   	  <tr>
-		<td colspan="2" background="/user{{$STATIC}}images/nav_bg.jpg" class="right_hg right fontcolor">
+		<td colspan="2" background="{{$STATIC}}images/nav_bg.jpg" class="right_hg right fontcolor">
 			当前位置 : <a href="/">首页</a> >> <a href="?c=public&a=host">虚拟主机</a>
 		</td>
 	 </tr>
@@ -17,7 +17,7 @@
 							<table border="0" cellpadding="0" cellspacing="4" id="table_r">
 								<tr>
 									<td  class="right color_red right_hg"><b>双线普及型主机</b></td><td>&nbsp;</td>
-									<td class="right_hg" align="right"><span class="right_r"><a href="/user/frame.php?c=frame&a=index&fc=product&fa=pageListProduct"><img src="/user{{$STATIC}}images/r_fdh_01.jpg" border="0"/></a></span></td>
+									<td class="right_hg" align="right"><span class="right_r"><a href="/user/frame.php?c=frame&a=index&fc=product&fa=pageListProduct"><img src="{{$STATIC}}images/r_fdh_01.jpg" border="0"/></a></span></td>
 								</tr>
 								<tr>
 								  <td class="right_hg2" align="center"><b>双线主机</b></td>
@@ -37,7 +37,7 @@
 										  <tr><td class="right">支持：html,{{$products[$i].templete}}</td></tr>
 										  <tr><td class="right">子目录绑定： {{if $products[$i].subdir}}支持{{else}}无{{/if}}</td></tr>
 										  <tr><td class="right">价格：<span class="color_red"><b>{{$products[$i].price}}</b></span>/年</td></tr>
-										  <tr><td class="right_r" colspan="2"><a href="user/frame.php?c=frame&a=index&fc=product&fa=sellForm&product=vhost_{{$products[$i].id}}"><img src="/user{{$STATIC}}images/r_btn01.jpg" border="0"/></a>&nbsp;&nbsp;
+										  <tr><td class="right_r" colspan="2"><a href="user/frame.php?c=frame&a=index&fc=product&fa=sellForm&product=vhost_{{$products[$i].id}}"><img src="{{$STATIC}}images/r_btn01.jpg" border="0"/></a>&nbsp;&nbsp;
 										  	<a href="/user/frame.php?c=frame&a=index&fc=product&fa=pageListProduct"><img src="user{{$STATIC}}images/r_btn02.jpg" border="0"/></a></td>
 										  </tr>
 								    </table>
@@ -67,7 +67,7 @@
 							
 								<tr>
 								<td  class="right color_red right_hg"><b>双线普及型主机</b></td><td>&nbsp;</td>
-								<td class="right_hg" align="right"><span class="right_r"><a href="/user/frame.php?c=frame&a=index&fc=product&fa=pageListProduct"><img src="/user{{$STATIC}}images/r_fdh_01.jpg" border="0"/></a></span></td>
+								<td class="right_hg" align="right"><span class="right_r"><a href="/user/frame.php?c=frame&a=index&fc=product&fa=pageListProduct"><img src="{{$STATIC}}images/r_fdh_01.jpg" border="0"/></a></span></td>
 								</tr>
 								<tr>
 								<td class="right_hg2" align="center"><b>双线主机</b></td>
@@ -92,8 +92,8 @@
 										  <tr><td class="right">支持：html,{{$products[$i].templete}}</td></tr>
 										  <tr><td class="right">子目录绑定： {{if $products[$i].subdir}}支持{{else}}无{{/if}}</td></tr>
 										  <tr><td class="right">价格：<span class="color_red"><b>{{$products[$i].price}}</b></span>/年</td></tr>
-										  <tr><td class="right_r" colspan="2"><a href="user/frame.php?c=frame&a=index&fc=product&fa=sellForm&product=vhost_{{$products[$i].id}}"><img src="/user{{$STATIC}}images/r_btn01.jpg" border="0"/></a>&nbsp;&nbsp;
-										  	<a href="/user/frame.php?c=frame&a=index&fc=product&fa=pageListProduct"><img src="/user{{$STATIC}}images/r_btn02.jpg" border="0"/></a></td>
+										  <tr><td class="right_r" colspan="2"><a href="user/frame.php?c=frame&a=index&fc=product&fa=sellForm&product=vhost_{{$products[$i].id}}"><img src="{{$STATIC}}images/r_btn01.jpg" border="0"/></a>&nbsp;&nbsp;
+										  	<a href="/user/frame.php?c=frame&a=index&fc=product&fa=pageListProduct"><img src="{{$STATIC}}images/r_btn02.jpg" border="0"/></a></td>
 										  </tr>
 									 </table>
 								  </td>	
@@ -118,7 +118,7 @@
 							<table id="table_r" cellpadding="0" cellspacing="4">
 								<tr>
 									<td  class="right color_red right_hg"><b>双线普及型主机</b></td><td>&nbsp;</td>
-									<td class="right_hg" align="right"><span class="right_r"><a href="/user/frame.php?c=frame&a=index&fc=product&fa=pageListProduct"><img src="/user{{$STATIC}}images/r_fdh_01.jpg" border="0"/></a></span></td>
+									<td class="right_hg" align="right"><span class="right_r"><a href="/user/frame.php?c=frame&a=index&fc=product&fa=pageListProduct"><img src="{{$STATIC}}images/r_fdh_01.jpg" border="0"/></a></span></td>
 								</tr>
 								<tr>
 								  <td class="right_hg2" align="center"><b>双线主机</b></td>
@@ -142,8 +142,8 @@
 										  <tr><td class="right">支持：html,{{$products[$i].templete}}</td></tr>
 										  <tr><td class="right">子目录绑定： {{if $products[$i].subdir}}支持{{else}}无{{/if}}</td></tr>
 										  <tr><td class="right">价格：<span class="color_red"><b>{{$products[$i].price}}</b></span>/年</td></tr>
-										  <tr><td class="right_r" colspan="2"><a href="user/frame.php?c=frame&a=index&fc=product&fa=sellForm&product=vhost_{{$products[$i].id}}"><img src="/user{{$STATIC}}images/r_btn01.jpg" border="0"/></a>&nbsp;&nbsp;
-										  	<a href="/user/frame.php?c=frame&a=index&fc=product&fa=pageListProduct"><img src="/user{{$STATIC}}images/r_btn02.jpg" border="0"/></a></td>
+										  <tr><td class="right_r" colspan="2"><a href="user/frame.php?c=frame&a=index&fc=product&fa=sellForm&product=vhost_{{$products[$i].id}}"><img src="{{$STATIC}}images/r_btn01.jpg" border="0"/></a>&nbsp;&nbsp;
+										  	<a href="/user/frame.php?c=frame&a=index&fc=product&fa=pageListProduct"><img src="{{$STATIC}}images/r_btn02.jpg" border="0"/></a></td>
 										  </tr>
 									 </table>
 								  </td>	
@@ -167,7 +167,7 @@
 							<table id="table_r" cellpadding="0" cellspacing="4">
 								<tr>
 									<td  class="right color_red right_hg"><b>双线普及型主机</b></td><td>&nbsp;</td>
-									<td class="right_hg" align="right"><span class="right_r"><a href="/user/frame.php?c=frame&a=index&fc=product&fa=pageListProduct"><img src="/user{{$STATIC}}images/r_fdh_01.jpg" border="0"/></a></span></td>
+									<td class="right_hg" align="right"><span class="right_r"><a href="/user/frame.php?c=frame&a=index&fc=product&fa=pageListProduct"><img src="{{$STATIC}}images/r_fdh_01.jpg" border="0"/></a></span></td>
 								</tr>
 								<tr>
 								  <td class="right_hg2" align="center"><b>双线主机</b></td>
@@ -191,8 +191,8 @@
 										  <tr><td class="right">支持：html,{{$products[$i].templete}}</td></tr>
 										  <tr><td class="right">子目录绑定： {{if $products[$i].subdir}}支持{{else}}无{{/if}}</td></tr>
 										  <tr><td class="right">价格：<span class="color_red"><b>{{$products[$i].price}}</b></span>/年</td></tr>
-										  <tr><td class="right_r" colspan="2"><a href="user/frame.php?c=frame&a=index&fc=product&fa=sellForm&product=vhost_{{$products[$i].id}}"><img src="/user{{$STATIC}}images/r_btn01.jpg" border="0"/></a>&nbsp;&nbsp;
-										  	<a href="/user/frame.php?c=frame&a=index&fc=product&fa=pageListProduct"><img src="/user{{$STATIC}}images/r_btn02.jpg" border="0"/></a></td>
+										  <tr><td class="right_r" colspan="2"><a href="user/frame.php?c=frame&a=index&fc=product&fa=sellForm&product=vhost_{{$products[$i].id}}"><img src="{{$STATIC}}images/r_btn01.jpg" border="0"/></a>&nbsp;&nbsp;
+										  	<a href="/user/frame.php?c=frame&a=index&fc=product&fa=pageListProduct"><img src="{{$STATIC}}images/r_btn02.jpg" border="0"/></a></td>
 										  </tr>
 									 </table>
 								  </td>	
@@ -215,7 +215,7 @@
 							<table id="table_r" cellpadding="0" cellspacing="4">
 								<tr>
 									<td  class="right color_red right_hg"><b>双线普及型主机</b></td><td>&nbsp;</td>
-									<td class="right_hg" align="right"><span class="right_r"><a href="/user/frame.php?c=frame&a=index&fc=product&fa=pageListProduct"><img src="/user{{$STATIC}}images/r_fdh_01.jpg" border="0"/></a></span></td>
+									<td class="right_hg" align="right"><span class="right_r"><a href="/user/frame.php?c=frame&a=index&fc=product&fa=pageListProduct"><img src="{{$STATIC}}images/r_fdh_01.jpg" border="0"/></a></span></td>
 								</tr>
 								<tr>
 								  <td class="right_hg2" align="center"><b>双线主机</b></td>
@@ -239,8 +239,8 @@
 										  <tr><td class="right">支持：html,{{$products[$i].templete}}</td></tr>
 										  <tr><td class="right">子目录绑定： {{if $products[$i].subdir}}支持{{else}}无{{/if}}</td></tr>
 										  <tr><td class="right">价格：<span class="color_red"><b>{{$products[$i].price}}</b></span>/年</td></tr>
-										  <tr><td class="right_r" colspan="2"><a href="user/frame.php?c=frame&a=index&fc=product&fa=sellForm&product=vhost_{{$products[$i].id}}"><img src="/user{{$STATIC}}images/r_btn01.jpg" border="0"/></a>&nbsp;&nbsp;
-										  	<a href="/user/frame.php?c=frame&a=index&fc=product&fa=pageListProduct"><img src="/user{{$STATIC}}images/r_btn02.jpg" border="0"/></a></td>
+										  <tr><td class="right_r" colspan="2"><a href="user/frame.php?c=frame&a=index&fc=product&fa=sellForm&product=vhost_{{$products[$i].id}}"><img src="{{$STATIC}}images/r_btn01.jpg" border="0"/></a>&nbsp;&nbsp;
+										  	<a href="/user/frame.php?c=frame&a=index&fc=product&fa=pageListProduct"><img src="{{$STATIC}}images/r_btn02.jpg" border="0"/></a></td>
 										  </tr>
 									 </table>
 								  </td>	
