--- a/user/view/default/public/contact.html
+++ b/user/view/default/public/contact.html
@@ -2,19 +2,19 @@
 <div align="center" class="right">
 	<table id="table_news" cellpadding="0" cellspacing="0" >
 		<tr>
-			<td colspan="2" background="/user{{$STATIC}}images/nav_bg.jpg" class="right_hg right fontcolor">
+			<td colspan="2" background="{{$STATIC}}images/nav_bg.jpg" class="right_hg right fontcolor">
 				当前位置 : <a href="/">首页</a> >> <a href="?c=help&a=index">使用帮助</a>
 			</td>
 		</tr>
 		<tr><td colspan="2" height="5"></td></tr>
 		<tr>
-			<td height="173" valign="top"><img src="/user{{$STATIC}}/images/aboutus.jpg" /></td>
+			<td height="173" valign="top"><img src="{{$STATIC}}/images/aboutus.jpg" /></td>
 		</tr>
 		<tr>
-			<td height="479" background="/user{{$STATIC}}/images/Cloud_host_info_bg.jpg" valign="top">
+			<td height="479" background="{{$STATIC}}/images/Cloud_host_info_bg.jpg" valign="top">
 			<!--客服代码开始-->
 				<table cellspacing="10" width="100%">
-					<tr><td align="left"><img src="/user{{$STATIC}}/images/info_Title_pic_contact.jpg" /></td></tr>
+					<tr><td align="left"><img src="{{$STATIC}}/images/info_Title_pic_contact.jpg" /></td></tr>
 					<tr><td class="right_h" align="left" height="30">
 						<p> 南昌邦腾科技有限公司<br/>
 							客服电话：0791-88355247<br />
