--- a/user/view/default/public/index.html
+++ b/user/view/default/public/index.html
@@ -10,29 +10,29 @@
 								<div class="picshow_main" style="z-index:10">
 									<div id="picdiv1">
 									  <a id="url1" href="#">
-										<img id="pic1" class="imgbig" src="/user{{$STATIC}}images/vip.jpg" alt="kangle 虚拟主机管理前台" border="0">
+										<img id="pic1" class="imgbig" src="{{$STATIC}}images/vip.jpg" alt="kangle 虚拟主机管理前台" border="0">
 									  </a>
 									</div>
 									<div id="picdiv2">
 									<a id="url2" href="#">
-										<img id="pic2" class="imgbig" src="/user{{$STATIC}}images/vip2.jpg" alt="kangle 虚拟主机管理前台" border="0"></a>
+										<img id="pic2" class="imgbig" src="{{$STATIC}}images/vip2.jpg" alt="kangle 虚拟主机管理前台" border="0"></a>
 									</div>
 									<div id="picdiv3">
 									  <a id="url3" href="#">
-										<img id="pic3" class="imgbig" src="/user{{$STATIC}}images/vip3.jpg" alt="kangle 虚拟主机管理前台" border="0">
+										<img id="pic3" class="imgbig" src="{{$STATIC}}images/vip3.jpg" alt="kangle 虚拟主机管理前台" border="0">
 									  </a>  
 									</div>
 									<div id="picdiv4">
 									  <a id="url4" href="#">
-										<img id="pic4" class="imgbig" src="/user{{$STATIC}}images/vip4.jpg" alt="kangle 虚拟主机管理前台" border="0">
+										<img id="pic4" class="imgbig" src="{{$STATIC}}images/vip4.jpg" alt="kangle 虚拟主机管理前台" border="0">
 									  </a>  
 									</div>
 	
 									<div class="picshow_change">
-									  <a href="javascript:changeimg(1);" id="xxjdjj1"><img src="/user{{$STATIC}}images/index_adb1.gif" border="0"></a>
-									  <a href="javascript:changeimg(2);" id="xxjdjj2"><img src="/user{{$STATIC}}images/index_adb2.gif" border="0"></a>
-									  <a href="javascript:changeimg(3);" id="xxjdjj3"><img src="/user{{$STATIC}}images/index_adb3.gif" border="0"></a>
-									  <a href="javascript:changeimg(4);" id="xxjdjj4"><img src="/user{{$STATIC}}images/index_adb4.gif" border="0"></a>
+									  <a href="javascript:changeimg(1);" id="xxjdjj1"><img src="{{$STATIC}}images/index_adb1.gif" border="0"></a>
+									  <a href="javascript:changeimg(2);" id="xxjdjj2"><img src="{{$STATIC}}images/index_adb2.gif" border="0"></a>
+									  <a href="javascript:changeimg(3);" id="xxjdjj3"><img src="{{$STATIC}}images/index_adb3.gif" border="0"></a>
+									  <a href="javascript:changeimg(4);" id="xxjdjj4"><img src="{{$STATIC}}images/index_adb4.gif" border="0"></a>
 									</div>
 								</div>
 								<script>change_img();</script>
@@ -50,7 +50,7 @@
 							<table id="table_r" cellpadding="0" cellspacing="4">
 								<tr>
 									<td  class="right color_red right_hg"><b>双线普及型主机</b></td><td>&nbsp;</td>
-									<td class="right_hg" align="right"><span class="right_r"><a href="/user/frame.php?c=frame&a=index&fc=product&fa=pageListProduct"><img src="/user{{$STATIC}}images/r_fdh_01.jpg" border="0"/></a></span></td>
+									<td class="right_hg" align="right"><span class="right_r"><a href="/user/frame.php?c=frame&a=index&fc=product&fa=pageListProduct"><img src="{{$STATIC}}images/r_fdh_01.jpg" border="0"/></a></span></td>
 								</tr>
 								<tr>
 								  <td class="right_hg2" align="center"><b>双线主机</b></td>
@@ -70,8 +70,8 @@
 										  <tr><td class="right">支持：html,{{$products[$i].templete}}</td></tr>
 										  <tr><td class="right">子目录绑定： {{if $products[$i].subdir}}支持{{else}}无{{/if}}</td></tr>
 										  <tr><td class="right">价格：<span class="color_red"><b>{{$products[$i].price}}</b></span>/年</td></tr>
-										  <tr><td class="right_r" colspan="2"><a href="user/frame.php?c=frame&a=index&fc=product&fa=sellForm&product=vhost_{{$products[$i].id}}"><img src="/user{{$STATIC}}images/r_btn01.jpg" border="0"/></a>&nbsp;&nbsp;
-										  	<a href="/user/frame.php?c=frame&a=index&fc=product&fa=pageListProduct"><img src="/user{{$STATIC}}images/r_btn02.jpg" border="0"/></a></td>
+										  <tr><td class="right_r" colspan="2"><a href="user/frame.php?c=frame&a=index&fc=product&fa=sellForm&product=vhost_{{$products[$i].id}}"><img src="{{$STATIC}}images/r_btn01.jpg" border="0"/></a>&nbsp;&nbsp;
+										  	<a href="/user/frame.php?c=frame&a=index&fc=product&fa=pageListProduct"><img src="{{$STATIC}}images/r_btn02.jpg" border="0"/></a></td>
 										  </tr>
 									 </table>
 								  </td>
@@ -100,7 +100,7 @@
 							
 								<tr>
 								<td  class="right color_red right_hg"><b>双线普及型主机</b></td><td>&nbsp;</td>
-								<td class="right_hg" align="right"><span class="right_r"><a href="/user/frame.php?c=frame&a=index&fc=product&fa=pageListProduct"><img src="/user{{$STATIC}}images/r_fdh_01.jpg" border="0"/></a></span></td>
+								<td class="right_hg" align="right"><span class="right_r"><a href="/user/frame.php?c=frame&a=index&fc=product&fa=pageListProduct"><img src="{{$STATIC}}images/r_fdh_01.jpg" border="0"/></a></span></td>
 								</tr>
 								<tr>
 								<td class="right_hg2" align="center"><b>双线主机</b></td>
@@ -125,8 +125,8 @@
 										  <tr><td class="right">支持：html,{{$products[$i].templete}}</td></tr>
 										  <tr><td class="right">子目录绑定： {{if $products[$i].subdir}}支持{{else}}无{{/if}}</td></tr>
 										  <tr><td class="right">价格：<span class="color_red"><b>{{$products[$i].price}}</b></span>/年</td></tr>
-										  <tr><td class="right_r" colspan="2"><a href="user/frame.php?c=frame&a=index&fc=product&fa=sellForm&product=vhost_{{$products[$i].id}}"><img src="/user{{$STATIC}}images/r_btn01.jpg" border="0"/></a>&nbsp;&nbsp;
-										  	<a href="/user/frame.php?c=frame&a=index&fc=product&fa=pageListProduct"><img src="/user{{$STATIC}}images/r_btn02.jpg" border="0"/></a></td>
+										  <tr><td class="right_r" colspan="2"><a href="user/frame.php?c=frame&a=index&fc=product&fa=sellForm&product=vhost_{{$products[$i].id}}"><img src="{{$STATIC}}images/r_btn01.jpg" border="0"/></a>&nbsp;&nbsp;
+										  	<a href="/user/frame.php?c=frame&a=index&fc=product&fa=pageListProduct"><img src="{{$STATIC}}images/r_btn02.jpg" border="0"/></a></td>
 										  </tr>
 									 </table>
 								  </td>	
@@ -151,7 +151,7 @@
 							<table id="table_r" cellpadding="0" cellspacing="4">
 								<tr>
 									<td  class="right color_red right_hg"><b>双线普及型主机</b></td><td>&nbsp;</td>
-									<td class="right_hg" align="right"><span class="right_r"><a href="/user/frame.php?c=frame&a=index&fc=product&fa=pageListProduct"><img src="/user{{$STATIC}}images/r_fdh_01.jpg" border="0"/></a></span></td>
+									<td class="right_hg" align="right"><span class="right_r"><a href="/user/frame.php?c=frame&a=index&fc=product&fa=pageListProduct"><img src="{{$STATIC}}images/r_fdh_01.jpg" border="0"/></a></span></td>
 								</tr>
 								<tr>
 								  <td class="right_hg2" align="center"><b>双线主机</b></td>
@@ -175,8 +175,8 @@
 										  <tr><td class="right">支持：html,{{$products[$i].templete}}</td></tr>
 										  <tr><td class="right">子目录绑定： {{if $products[$i].subdir}}支持{{else}}无{{/if}}</td></tr>
 										  <tr><td class="right">价格：<span class="color_red"><b>{{$products[$i].price}}</b></span>/年</td></tr>
-										  <tr><td class="right_r" colspan="2"><a href="user/frame.php?c=frame&a=index&fc=product&fa=sellForm&product=vhost_{{$products[$i].id}}"><img src="/user{{$STATIC}}images/r_btn01.jpg" border="0"/></a>&nbsp;&nbsp;
-										  	<a href="/user/frame.php?c=frame&a=index&fc=product&fa=pageListProduct"><img src="/user{{$STATIC}}images/r_btn02.jpg" border="0"/></a></td>
+										  <tr><td class="right_r" colspan="2"><a href="user/frame.php?c=frame&a=index&fc=product&fa=sellForm&product=vhost_{{$products[$i].id}}"><img src="{{$STATIC}}images/r_btn01.jpg" border="0"/></a>&nbsp;&nbsp;
+										  	<a href="/user/frame.php?c=frame&a=index&fc=product&fa=pageListProduct"><img src="{{$STATIC}}images/r_btn02.jpg" border="0"/></a></td>
 										  </tr>
 									 </table>
 								  </td>	
