--- a/user/view/default/public/left.html
+++ b/user/view/default/public/left.html
@@ -50,7 +50,7 @@
 			<!--帮助代码结束-->
 			<div class="height_t"><table id="table_r"><tr><td height="5"></td></tr></table></div>
 			<!--备案图片结束-->
-			<div class="bgcolor_left left_bg_help left_beiban"><a href="http://www.miitbeian.gov.cn" target='_blank'><img src="/user{{$STATIC}}images/l_beian.jpg" border="0"/></a></div>
+			<div class="bgcolor_left left_bg_help left_beiban"><a href="http://www.miitbeian.gov.cn" target='_blank'><img src="{{$STATIC}}images/l_beian.jpg" border="0"/></a></div>
 			<!--备案图片结束-->
 			<div class="height_t"><table id="table_r"><tr><td height="5"></td></tr></table></div>
 			<!--客服代码开始-->
@@ -76,11 +76,11 @@
 			<!--客服代码结束-->
 			<div class="height_t"><table id="table_r"><tr><td height="5"></td></tr></table></div>
 			<!--左下角图片开始-->
-			<div class="left_box bgcolor_left left_bg_help left_dns"><a href="#"><img src="/user{{$STATIC}}images/l_dns.jpg" border="0"/></a></div>
+			<div class="left_box bgcolor_left left_bg_help left_dns"><a href="#"><img src="{{$STATIC}}images/l_dns.jpg" border="0"/></a></div>
 			<div class="height_t"><table width="100%" border="0"><tr><td height="5"></td></tr></table></div>
-			<div class="left_box bgcolor_left left_bg_help left_vip"><a href="#"><img src="/user{{$STATIC}}images/l_vip.jpg" border="0"/></a></div>
+			<div class="left_box bgcolor_left left_bg_help left_vip"><a href="#"><img src="{{$STATIC}}images/l_vip.jpg" border="0"/></a></div>
 			<div class="height_t"><table width="100%" border="0"><tr><td height="5"></td></tr></table></div>
-			<div class="left_box bgcolor_left left_bg_help left_vip2"><a href="#"><img src="/user{{$STATIC}}images/l_vip2.jpg" border="0"/></a></div>
+			<div class="left_box bgcolor_left left_bg_help left_vip2"><a href="#"><img src="{{$STATIC}}images/l_vip2.jpg" border="0"/></a></div>
 			<!--左下角图片结束-->
 		</div>
 	  <!--左部文件结束-->
