--- a/user/view/default/public/left.html
+++ b/user/view/default/public/left.html
@@ -10,8 +10,7 @@
 						<table cellpadding="0" cellspacing="0" id="table_t">
 						{{for $i=count($news);$i>(count($news))-7;$i--}}
 							<tr>
-								<td class="fontcolor"><font color='red'><a href="?c=public&a=viewNewsById&id={{$news[$i].id}}" >{{substr($news[$i].title,0,21)}}</a></font></td>
-								<td class="fontcolor"><font color='red'>{{substr($news[$i].add_time,5,5)}}</font></td>
+								<td class="fontcolor"><font color='red'><a href="?c=public&a=viewNewsById&id={{$news[$i].id}}" >{{$news[$i].title}}</a></font></td>
 							</tr>
 						 {{/for}}
 						</table>
