del admin/left.html is front

--- a/admin/view/default/left.html
+++ b/admin/view/default/left.html
@@ -85,7 +85,7 @@ function SwitchMenu(obj,sty)
 	</h1>
 	<ul class="submenu" id="sub6" >
 		<li><a href='?c=setting&a=index&sub=alipay' target='main'>网上支付设置</a></li>
-		<li><a href='?c=front&a=pageListIndex' target='main'>前台设置列表</a></li>
+		<!-- <li><a href='?c=front&a=pageListIndex' target='main'>前台设置列表</a></li> -->
 	 	</ul>
 </div>
 </td></tr>
