--- a/admin/view/default/left.html
+++ b/admin/view/default/left.html
@@ -36,56 +36,52 @@ function SwitchMenu(obj,sty)
 </script>
 <div id="masterdiv">
 <div align="center"><a href="http://www.kanglesoft.com" target="_blank"><img src='{{$STATIC}}/style/kanglevhms.gif' border="0"/></a></div>
-<h1 id="m2" onClick="SwitchMenu('sub2','m2')" class="menu"><ol id="p2">{{$lang.account_manage}}</ol></h1>
-	<ul class="submenu" id="sub2" >
-		<li><a href="?c=index&a=main" target='main'>{{$lang.myinfo}}</a></li>	
-		<li><a href="?c=session&a=changePasswordForm" target='main'>{{$lang.change_passwd}}</a></li>
-		<li><a href="?c=adminuser&a=listUser" target='main'>管理员</a></li>	
-		<li><a href="?c=session&a=logout" target='_top'>退出登录</a></li>
-	</ul>
-	<h1 id="m4" onClick="SwitchMenu('sub4','m4')" class="menu"><ol id="p4">主机管理</ol></h1>
-	<ul class="submenu" id="sub4" >
-		<li><a href="?c=nodes&a=listNode" target='main'>主机列表</a></li>	
-		<li><a href="?c=nodes&a=addNode" target='main'>增加主机</a></li>
-	</ul>
-	<h1 id="m5" onClick="SwitchMenu('sub5','m5')" class="menu"><ol id="p5">用户管理</ol></h1>
-	<ul class="submenu" id="sub5" >
-		<li><a href="?c=user&a=listUser" target='main'>用户查询</a></li>
-		<li><a href="?c=user&a=pageUsers" target='main'>用户列表</a></li>
-		
-		<li><a href="/user/frame.php?c=public&a=registerForm&at=1" target='main'>注册用户</a></li>	
-	</ul>
-
-	<h1 id="m6" onClick="SwitchMenu('sub6','m6')" class="menu"><ol id="p6">
-	  虚拟主机
-	</ol>
-	</h1>
-	<ul class="submenu" id="sub6" >
-		<li><a href="?c=vhost&a=pageVhost" target='main'>虚拟主机列表</a></li>	
-		<li><a href="?c=vhostproduct&a=showProduct" target='main'>产品列表</a></li>	
-		<li><a href="?c=vhostproduct&a=addProductForm" target='main'>增加产品</a></li>
-	</ul>
 	
-	<h1 id="m8" onClick="SwitchMenu('sub8','m8')" class="menu">
-		<ol id="p8">财务管理</ol>
-	</h1>
-	<ul class="submenu" id="sub8" >
-		<li><a href='?c=money&a=pageMoneyin' target='main'>充值记录</a></li>
-		<li><a href='?c=money&a=pageMoneyout' target='main'>消费记录</a></li>	
-	</ul>	
-	<h1 id="m9" onClick="SwitchMenu('sub9','m9')" class="menu">
-		<ol id="p9">信息管理</ol>
-	</h1>
-	<ul class="submenu" id="sub8" >
-		<li><a href='?c=question&a=pageQuestion' target='main'>用户提问</a></li>
-		<li><a href='?c=news&a=pageNews' target='main'>公告管理</a></li>		
-	</ul>	
-	<h1 id="m6" onClick="SwitchMenu('sub7','m7')" class="menu">
-		<ol id="p7">系统设置</ol>
-	</h1>
-	<ul class="submenu" id="sub6" >
-		<li><a href='?c=setting&a=index&sub=alipay' target='main'>网上支付设置</a></li>
-		<!-- <li><a href='?c=front&a=pageListIndex' target='main'>前台设置列表</a></li> -->
+	<h1 id="m2" onClick="SwitchMenu('sub2','m2')" class="menu"><ol id="p2">{{$lang.account_manage}}</ol></h1>
+		<ul class="submenu" id="sub2" >
+			<li><a href="?c=index&a=main" target='main'>{{$lang.myinfo}}</a></li>	
+			<li><a href="?c=session&a=changePasswordForm" target='main'>{{$lang.change_passwd}}</a></li>
+			<li><a href="?c=adminuser&a=listUser" target='main'>管理员</a></li>	
+			<li><a href="?c=session&a=logout" target='_top'>退出登录</a></li>
+		</ul>
+		
+	<h1 id="m4" onClick="SwitchMenu('sub4','m4')" class="menu"><ol id="p4">主机管理</ol></h1>
+		<ul class="submenu" id="sub4" >
+			<li><a href="?c=nodes&a=listNode" target='main'>主机列表</a></li>	
+			<li><a href="?c=nodes&a=addNode" target='main'>增加主机</a></li>
+		</ul>
+		
+	<h1 id="m5" onClick="SwitchMenu('sub5','m5')" class="menu"><ol id="p5">用户管理</ol></h1>
+		<ul class="submenu" id="sub5" >
+			<li><a href="?c=user&a=listUser" target='main'>用户查询</a></li>
+			<li><a href="?c=user&a=pageUsers" target='main'>用户列表</a></li>
+			<li><a href="/user/frame.php?c=public&a=registerForm&at=1" target='main'>注册用户</a></li>	
+		</ul>
+
+	<h1 id="m6" onClick="SwitchMenu('sub6','m6')" class="menu"><ol id="p6">虚拟主机</ol>	</h1>
+	
+		<ul class="submenu" id="sub6" >
+			<li><a href="?c=vhost&a=pageVhost" target='main'>虚拟主机列表</a></li>	
+			<li><a href="?c=vhostproduct&a=showProduct" target='main'>产品列表</a></li>	
+			<li><a href="?c=vhostproduct&a=addProductForm" target='main'>增加产品</a></li>
+		</ul>
+	
+	<h1 id="m8" onClick="SwitchMenu('sub8','m8')" class="menu"><ol id="p8">财务管理</ol>	</h1>
+		<ul class="submenu" id="sub8" >
+			<li><a href='?c=money&a=pageMoneyin' target='main'>充值记录</a></li>
+			<li><a href='?c=money&a=pageMoneyout' target='main'>消费记录</a></li>	
+		</ul>
+			
+	<h1 id="m8" onClick="SwitchMenu('sub8','m8')" class="menu"><ol id="p8">信息管理</ol>	</h1>
+		<ul class="submenu" id="sub8" >
+			<li><a href='?c=question&a=pageQuestion' target='main'>用户提问</a></li>
+			<li><a href='?c=news&a=pageNews' target='main'>公告管理</a></li>		
+		</ul>
+			
+	<h1 id="m6" onClick="SwitchMenu('sub7','m7')" class="menu"><ol id="p7">系统设置</ol>	</h1>
+		<ul class="submenu" id="sub6" >
+			<li><a href='?c=setting&a=index&sub=alipay' target='main'>网上支付设置</a></li>
+			<!-- <li><a href='?c=front&a=pageListIndex' target='main'>前台设置列表</a></li> -->
 	 	</ul>
 </div>
 </td></tr>
