--- a/user/view/default/public/error.html
+++ b/user/view/default/public/error.html
@@ -8,7 +8,7 @@
 					<table width=100%>
 						<tr>
 							<td align="center">
-							<img src='/user{{$STATIC}}/images/error.jpg' width="388" height="62">
+							<img src='{{$STATIC}}/images/error.jpg' width="388" height="62">
 							</td>
 						</tr>
 						<tr>
