--- a/user/view/default/user/left.html
+++ b/user/view/default/user/left.html
@@ -10,31 +10,36 @@
 		}
 		</script>
 		<div id="masterdiv">
-		<div align="center"><a href="/" target="_blank"><img src='{{$STATIC}}/images/toindex.gif' border="0"/></a></div>
 			<h1 id="m2" onClick="SwitchMenu('sub2','m2')" class="menu">
 			  帐户管理
 			</h1>
-			<ul class="submenu" id="sub5" >
+			<div class="u_left_box">
+			<ul id="sub5">
 				<li><a href="?c=user&a=index" target="{{$target}}">帐户信息</a></li>
 				<li><a href="?c=user&a=changeForm" target="{{$target}}">修改资料</a></li>
 				<li><a href="?c=session&a=changePasswordForm" target="{{$target}}">修改密码</a></li>
 				<li><a href="?c=session&a=logout" target="_top">退出</a></li>
 			</ul>
+			</div>
 			
 			<h1 id="m4" onClick="SwitchMenu('sub4','m4')" class="menu">财务管理</h1>
+			<div class="u_left_box">
 			<ul class="submenu" id="sub4" >
 				<li><a href="?c=money&a=addFrom" target="{{$target}}">在线充值</a></li>	
-				<li><a href="?c=money&a=moneyin" target="{{$target}}"">充值记录</a></li>
+				<li><a href="?c=money&a=moneyin" target="{{$target}}">充值记录</a></li>
 				<li><a href="?c=money&a=moneyout" target="{{$target}}" >消费记录</a></li>
 				</ul>
+				</div>
 					<h1 id="m6" onClick="SwitchMenu('sub6','m6')" class="menu">	
 				我的产品	 
 			</h1>
+			<div class="u_left_box">
 			<ul class="submenu" id="sub6" >
 				<li><a href="?c=vhostproduct&a=pageVhostByuser" target="{{$target}}">我的虚拟主机</a></li>
 				<li><a href="?c=product&a=pageListProduct" target="{{$target}}">购买产品列表</a></li>
 				<li><a href="?c=question&a=pageByuser" target="{{$target}}">我的提问</a></li>
 			 </ul>
+			 </div>
 		</div>
 		</td>
 	</tr>
