--- a/user/view/default/style/left.css
+++ b/user/view/default/style/left.css
@@ -84,3 +84,6 @@ width:100%;
 height:100%;
 }
 .u_left_box {BORDER-RIGHT: #C2C2C2 1px solid; BORDER-TOP: #FFFFFF 1px solid; BACKGROUND: #fafcff; MARGIN: 0px 0px 6px; BORDER-LEFT: #C2C2C2 1px solid; BORDER-BOTTOM: #C2C2C2 1px solid;}
+.l_white{
+color:#FFFFFF;
+}
