--- a/user/view/default/user/left.html
+++ b/user/view/default/user/left.html
@@ -10,8 +10,8 @@
 		}
 		</script>
 		<div id="masterdiv">
-			<h1 id="m2" onClick="SwitchMenu('sub2','m2')" class="menu">
-			  帐户管理
+			<h1 id="m2" onClick="SwitchMenu('sub2','m2')" class="menu l_white">
+			  <b>帐户管理</b>
 			</h1>
 			<div class="u_left_box">
 			<ul id="sub5">
@@ -22,7 +22,7 @@
 			</ul>
 			</div>
 			
-			<h1 id="m4" onClick="SwitchMenu('sub4','m4')" class="menu">财务管理</h1>
+			<h1 id="m4" onClick="SwitchMenu('sub4','m4')" class="menu l_white"><b>财务管理</b></h1>
 			<div class="u_left_box">
 			<ul class="submenu" id="sub4" >
 				<li><a href="?c=money&a=addFrom" target="{{$target}}">在线充值</a></li>	
@@ -30,8 +30,8 @@
 				<li><a href="?c=money&a=moneyout" target="{{$target}}" >消费记录</a></li>
 				</ul>
 				</div>
-					<h1 id="m6" onClick="SwitchMenu('sub6','m6')" class="menu">	
-				我的产品	 
+					<h1 id="m6" onClick="SwitchMenu('sub6','m6')" class="menu l_white">	
+				<b>我的产品</b>	 
 			</h1>
 			<div class="u_left_box">
 			<ul class="submenu" id="sub6" >
