--- a/admin/view/default/left.html
+++ b/admin/view/default/left.html
@@ -55,7 +55,8 @@ function SwitchMenu(obj,sty)
 		<ul class="submenu" id="sub5" >
 			<li><a href="?c=user&a=listUser" target='main'>用户查询</a></li>
 			<li><a href="?c=user&a=pageUsers" target='main'>用户列表</a></li>
-			<li><a href="/user/frame.php?c=public&a=registerForm&at=1" target='main'>注册用户</a></li>	
+			<li><a href="/user/frame.php?c=public&a=registerForm&at=1" target='main'>注册用户</a></li>
+			<li><a href="?c=vhost&a=pageVhostByExpire_time&day=1" target='main'>过期用户</a></li>		
 		</ul>
 
 	<h1 id="m6" onClick="SwitchMenu('sub6','m6')" class="menu"><ol id="p6">虚拟主机</ol>	</h1>
@@ -80,7 +81,7 @@ function SwitchMenu(obj,sty)
 	<h1 id="m6" onClick="SwitchMenu('sub7','m7')" class="menu"><ol id="p7">系统设置</ol>	</h1>
 		<ul class="submenu" id="sub6" >
 			<li><a href='?c=setting&a=index&sub=alipay' target='main'>网上支付设置</a></li>
-			<!-- <li><a href='?c=front&a=pageListIndex' target='main'>前台设置列表</a></li> -->
+			<li><a href='?c=front&a=pageListIndex' target='main'>前台设置列表</a></li>
 	 	</ul>
 </div>
 </td></tr>
