--- a/user/view/default/money/add.html
+++ b/user/view/default/money/add.html
@@ -1,24 +1,21 @@
-<body bgcolor='#ffffff' text='#000000' leftmargin='0' topmargin='0' onLoad="javascript:reg.money.focus();">
-<div align="center">
+<div class="right" align="center">
+<div class="wid_ri r_mar" ><img src="{{$STATIC}}style/use_cio.jpg" width="750" height="85"  border="0"/></div>
+<div class="wid_ri r_mar" align="right">
   <form  name='reg' action="?c=money&a=add" method='post' target='_blank'>
-<div class="head_block tb_wid">&nbsp;在线充值</div>
-<div class="block tb_wid">
- <table id="table_2" cellpadding="0" cellspacing="1">
-    
+	<table id="table_ri" cellpadding="0" cellspacing="1">
+	 <tr><td colspan="2">在线充值</td></tr>
       <tr>
-        <td class="td_bgc right_2">支付方式:</td>
-        <td class="td_bgc right_2">
+        <td>支付方式:</td>
+        <td>
         <input type="radio" name="gw" value="1" checked="checked" />支付宝 
         </td>
       </tr>
-      
 	  <tr>
         <td class="td_bgc right_2">金额(元):</td>
         <td class="td_bgc right_2">
         <input name='money' type='text' id="tb_wid3"  value="" size="4"/>&nbsp;<input type="submit" value="确认" />
        </td>
       </tr>
-
     </table>
 	</div>
 	</form>
