--- a/user/view/default/user/changeForm.html
+++ b/user/view/default/user/changeForm.html
@@ -1,8 +1,9 @@
 <form action="?c=user&a=change" method="post">
-<div align="center">
-	<div class="head_block tb_wid">&nbsp;修改资料</div>
-	<div class="block tb_wid">
-		<table id="table_2" cellpadding="0" cellspacing="1">
+<div class="right" align="center">
+<div class="wid_ri r_mar" ><img src="{{$STATIC}}style/use_cio.jpg" width="750" height="85"  border="0"/></div>
+<div class="wid_ri r_mar" align="right">
+<table id="table_ri" cellpadding="0" cellspacing="1">
+			<tr><td colspan="2" class="bg_tab23">修改资料</td></tr>
 			<tr>
 				<td class="td_bgc right_2">用户名：</td>
 				<td class="td_bgc tb_wid2 right_2">{{$user.username}}</td>
