--- a/user/view/default/user/left.html
+++ b/user/view/default/user/left.html
@@ -17,7 +17,7 @@
 			<ul id="sub5">
 				<li><a href="?c=user&a=index" target="{{$target}}">帐户信息</a></li>
 				<li><a href="?c=user&a=changeForm" target="{{$target}}">修改资料</a></li>
-				<li><a href="?c=session&a=changePasswordForm" target="{{$target}}">修改密码</a></li>
+				<li><a href="?c=user&a=changePasswordForm" target="{{$target}}">修改密码</a></li>
 				<li><a href="?c=session&a=logout" target="_top">退出</a></li>
 			</ul>
 			</div>
