--- a/user/view/default/user/changePassword.html
+++ b/user/view/default/user/changePassword.html
@@ -12,7 +12,7 @@ function checkPassword()
 	frm.submit();
 }
 </script>
-<form name='frm' action="?c=session&a=changePassword" method="post">
+<form name='frm' action="?c=user&a=changePassword" method="post">
 <div class="right" align="center">
 <div class="wid_ri r_mar" ><img src="{{$STATIC}}style/use_cio.jpg" width="750" height="85"  border="0"/></div>
 <div class="wid_ri r_mar" align="right">
