--- a/user/view/default/money/add.html
+++ b/user/view/default/money/add.html
@@ -1,5 +1,5 @@
 <div class="right" align="center">
-<div class="wid_ri r_mar" ><img src="{{$STATIC}}style/use_cio.jpg" width="750" height="85"  border="0"/></div>
+<div class="wid_ri r_mar" ><img src="{{$STATIC}}style/yfk_cio.jpg" width="750" height="85"  border="0"/></div>
 <div class="wid_ri r_mar" align="right">
   <form  name='reg' action="?c=money&a=add" method='post' target='_blank'>
 	<table id="table_ri" cellpadding="0" cellspacing="1">
