--- a/user/view/default/money/moneyout.html
+++ b/user/view/default/money/moneyout.html
@@ -1,5 +1,5 @@
 <div class="right" align="center">
-<div class="wid_ri r_mar" ><img src="{{$STATIC}}style/use_cio.jpg" width="750" height="85"  border="0"/></div>
+<div class="wid_ri r_mar" ><img src="{{$STATIC}}style/yfk_cio.jpg" width="750" height="85"  border="0"/></div>
 <div class="wid_ri r_mar" align="right">
 	<div class="r_mar_top" align="right">
 		{{if $page>1}}
