--- a/user/view/default/msg.html
+++ b/user/view/default/msg.html
@@ -1,9 +1,12 @@
-{{include file='common/head.html'}}
-<body bgcolor='#ffffff' text='#000000' leftmargin='0' topmargin='0'>
-<div align="center"><br />
-<div class="block tb_wid mar_top" align="center"> 
- <font color='red'>{{$msg}}</font>
+<div class="right" align="center">
+	<div class="wid_ri r_mar" ><img src="{{$STATIC}}style/use_cio.jpg" width="750" height="85"  border="0"/></div>
+	<div class="wid_ri mar_top">
+		<table id="table_ri" cellpadding="0" cellspacing="1">
+		<tr>					
+			<td align="center">
+	 		<font color='red'>{{$msg}}</font>
+			</td>					
+		</tr>
+		</table>
+	</div>
 </div>
-</div>
-</body>
-{{include file='common/foot.html'}}
