--- a/user/view/default/question/add.html
+++ b/user/view/default/question/add.html
@@ -1,31 +1,29 @@
-{{include file='common/head.html'}}
-<body bgcolor='#ffffff' text='#000000' leftmargin='0' topmargin='0' onLoad="javascript:reg.title.focus();">
-<div align="center">
+<div class="right" align="center">
   <form  name='reg' action="?c=question&a=add" method='post'>
-<div class="head_block tb_wid">&nbsp;在线提问</div>
-<div class="block tb_wid">
- <table id="table_2" cellpadding="0" cellspacing="1">
- 	  <tr>
-        <td class="td_bgc right_2">标题:</td> 
-        <td class="td_bgc right_2">
-        <input name='title' MaxLength="40" type='text' value="" size="35"/>
-       </td>
-       </tr>
-       <tr>
-        <td class="td_bgc right_2">内容:</td>
-        <td class="td_bgc right_2">
-       <textarea name='body' MaxLength="500" rows='8' cols='40'></textarea>
-       	</td>
-     	</tr>
-      <tr>
-	    <td class="td_bgc td_hg" colspan="2" align="center">
-		 <input type="submit" value="确认" />
-		</td>
-      </tr>
+<div class="wid_ri r_mar" ><img src="{{$STATIC}}style/use_cio.jpg" width="750" height="85"  border="0"/></div>
+<div class="wid_ri r_mar" align="right">
+	<table id="table_ri" cellpadding="0" cellspacing="1">
+		 <tr><td colspan="2">在线提问</td></tr>
+		  <tr>
+			<td class="td_bgc right_2">标题:</td> 
+			<td class="td_bgc right_2">
+			<input name='title' MaxLength="40" type='text' value="" size="35"/>
+		   </td>
+		   </tr>
+		   <tr>
+			<td class="td_bgc right_2">内容:</td>
+			<td class="td_bgc right_2">
+		   <textarea name='body' MaxLength="500" rows='8' cols='40'></textarea>
+			</td>
+			</tr>
+		  <tr>
+			<td class="td_bgc td_hg" colspan="2" align="center">
+			 <input type="submit" value="确认" />
+			</td>
+		  </tr>
     </table>
 	</div>
 	</form>
 </div>
-</body>
-</html>
+
 
