--- a/user/view/default/question/list.html
+++ b/user/view/default/question/list.html
@@ -1,27 +1,27 @@
-{{include file='common/head.html'}}
-<div align="center">
-<div class="head_block tb_wid2">&nbsp;在线提问</div>
-<div class="block tb_wid2">
- <table id="table_2" cellpadding="0" cellspacing="1">
- 	  <tr>
-        <td class="td_bgc right_2">提问标题:</td> 
-        <td class="td_bgc right_2">{{$log.title}}</td>
-       	</tr>
-       <tr>
-        <td class="td_bgc right_2">提问内容:</td>
-        <td class="td_bgc right_2" >{{$log.body}}</td>
-     	</tr>
-      <tr>
-        <td class="td_bgc right_2">管理员回复:</td>
-        <td class="td_bgc right_2" >{{$log.reply}}</td>
-     	</tr>
-     	{{if $log.reply_time!=""}}
-     	 <tr>
-        <td class="td_bgc right_2">回复时间:</td>
-        <td class="td_bgc right_2" >{{$log.reply_time}}</td>
-     	</tr>
-     	{{/if}}
-    </table>
-</div>
+<div class="right" align="center">
+	<div class="wid_ri r_mar" ><img src="{{$STATIC}}style/use_cio.jpg" width="750" height="85"  border="0"/></div>
+	<div class="wid_ri r_mar" align="right">
+	  <table id="table_ri" cellpadding="0" cellspacing="1">
+		 <tr><td colspan="2" class="red"><b>在线提问</b></td></tr>
+		  <tr>
+			<td>提问标题:</td> 
+			<td class="wid3">{{$log.title}}</td>
+			</tr>
+		   <tr>
+			<td>提问内容:</td>
+			<td>{{$log.body}}</td>
+			</tr>
+		  <tr>
+			<td>管理员回复:</td>
+			<td>{{$log.reply}}</td>
+			</tr>
+			{{if $log.reply_time!=""}}
+			 <tr>
+			<td>回复时间:</td>
+			<td>{{$log.reply_time}}</td>
+			</tr>
+			{{/if}}
+    	</table>
+	</div>
 </div>
 {{include file='common/foot.html'}}
