--- a/user/view/default/vhostproduct/listVhost.html
+++ b/user/view/default/vhostproduct/listVhost.html
@@ -1,73 +1,69 @@
-{{include file='common/head.html'}}
-<body bgcolor='#ffffff' text='#000000' leftmargin='0' topmargin='0' onLoad="javascript:form1.name.focus();">
-<div id="container">
-	<div align="center">
-	<table class="tb_wid5" align='center'>
-	<form name='form1' action='?c=vhostproduct&a=pageVhostByuser' method='post'>
-	<tr><td>
-	用户名或域名:<input type='text' name='name' value='{{$name}}'><input type='submit' value='搜索'>
-	</td><td align='right'><div class="mar_top tb_wid5" align="right">
-			{{if $page>1}}
-			<a href='?c=vhostproduct&a=pageVhostByuser&page=0'>首页</a> 
-			<a href='?c=vhostproduct&a=pageVhostByuser&page={{$page-1}}'>上一页</a> 
-			{{else}}
-			首页 上一页 
-			{{/if}}
-			{{if $page!=$total_page}} 
-			<a href='?c=vhostproduct&a=pageVhostByuser&page={{$page+1}}'>下一页</a>
-			<a href='?c=vhostproduct&a=pageVhostByuser&page={{$total_page}}'>尾页</a>
-			{{else}}下一页 尾页
-			{{/if}} 
-			{{$page}}/{{$total_page}}&nbsp;
-			共计{{$count}}记录
-			</div></td></tr></form></table>
-	
-			<div class="block tb_wid5">
-				<table id="table" border="0" cellpadding="0" cellspacing="1">
-					<tr id="ttitle">
-					  	<td  bgcolor='#efefef' class='color01 right'>操作</td>
-						<td class="td_bgc right_2">空间名</td>
-						<td class="td_bgc right_2">uid</td>
-						<td class="td_bgc right_2">产品</td>
-						<td class="td_bgc right_2">服务器</td>
-						<td class="td_bgc right_2">注册时间</td>
-						<td class="td_bgc right_2">过期时间</td>
-						<td class="td_bgc right_2">空间状态</td>
-						
-						</tr>
-						{{foreach from=$list item=row}}
-					<tr>
-					   <td class="right"> 
-					    [<a href="?c=vhostproduct&a=upgradeForm&name={{$row.name}}" >升级</a>]
-						[<a href="?c=vhostproduct&a=renewForm&name={{$row.name}}" >续费</a>]
-       			 		[<a href="?c=vhostproduct&a=impLogin&name={{$row.name}}" >控制面板</a>]</td>
-						<td class="td_bgc right_2"><a href='?c=vhostproduct&a=impLogin&name={{$row.name}}'>{{$row.name}}</a></td>
-						<td class="td_bgc right_2">{{$row.uid}}</td>
-						<td class="td_bgc right_2">{{$row.product_name}}</td>
-						<td class="td_bgc right_2">{{$row.node}}</td>
-						<td class="td_bgc right_2">{{$row.create_time}}</td>
-						<td class="td_bgc right_2">{{$row.expire_time}}</td>
-						<td class="td_bgc right_2" title='{{$row.status}}'>{{if $row.status==0}}正常{{else}}<font color='red'>非正常</font>{{/if}}</td>
-						</tr>
-						{{/foreach}}
-			  </table>
-			</div>
-			<div class="mar_top tb_wid5" align="right">
-			{{if $page>1}}
-			<a href='?c=vhostproduct&a=pageVhostByuser&page=0'>首页</a> 
-			<a href='?c=vhostproduct&a=pageVhostByuser&page={{$page-1}}'>上一页</a> 
-			{{else}}
-			首页 上一页 
-			{{/if}}
-			{{if $page!=$total_page}} 
-			<a href='?c=vhostproduct&a=pageVhostByuser&page={{$page+1}}'>下一页</a>
-			<a href='?c=vhostproduct&a=pageVhostByuser&page={{$total_page}}'>尾页</a>
-			{{else}}下一页 尾页
-			{{/if}} 
-			{{$page}}/{{$total_page}}&nbsp;
-			共计{{$count}}记录
-		</div>
+<div class="right" align="center">
+<div class="wid_ri r_mar" ><img src="{{$STATIC}}style/use_cio.jpg" width="750" height="85"  border="0"/></div>
+<div class="wid_ri r_mar" align="right">
+	<div class="r_mar_top" align="right">
+		<table cellpadding="0" cellspacing="0" class="wid_rr">
+			<form name='form1' action='?c=vhostproduct&a=pageVhostByuser' method='post'>
+			<tr><td>
+				用户名或域名:<input type='text' name='name' value='{{$name}}'><input type='submit' value='搜索'>
+			</td><td align='right'>
+				{{if $page>1}}
+				<a href='?c=vhostproduct&a=pageVhostByuser&page=0'>首页</a> 
+				<a href='?c=vhostproduct&a=pageVhostByuser&page={{$page-1}}'>上一页</a> 
+				{{else}}
+				首页 上一页 
+				{{/if}}
+				{{if $page!=$total_page}} 
+				<a href='?c=vhostproduct&a=pageVhostByuser&page={{$page+1}}'>下一页</a>
+				<a href='?c=vhostproduct&a=pageVhostByuser&page={{$total_page}}'>尾页</a>
+				{{else}}下一页 尾页
+				{{/if}} 
+				{{$page}}/{{$total_page}}&nbsp;
+				共计{{$count}}记录
+			</td></tr>
+			</form>
+	  </table>
+	</div>
+	<table id="table_ri" cellpadding="0" cellspacing="1">
+				<tr>
+					<td>操作</td>
+					<td>空间名</td>
+					<td>uid</td>
+					<td>产品</td>
+					<td>服务器</td>
+					<td>注册时间</td>
+					<td>过期时间</td>
+					<td>空间状态</td>
+					</tr>
+					{{foreach from=$list item=row}}
+				<tr>
+				   <td class="right"> 
+					[<a href="?c=vhostproduct&a=upgradeForm&name={{$row.name}}" >升级</a>]
+					[<a href="?c=vhostproduct&a=renewForm&name={{$row.name}}" >续费</a>]
+					[<a href="?c=vhostproduct&a=impLogin&name={{$row.name}}" target="_blank" >控制面板</a>]</td>
+					<td><a href='?c=vhostproduct&a=impLogin&name={{$row.name}}' target="_blank">{{$row.name}}</a></td>
+					<td>{{$row.uid}}</td>
+					<td>{{$row.product_name}}</td>
+					<td>{{$row.node}}</td>
+					<td>{{$row.create_time}}</td>
+					<td>{{$row.expire_time}}</td>
+					<td title='{{$row.status}}'>{{if $row.status==0}}正常{{else}}<font color='red'>非正常</font>{{/if}}</td>
+					</tr>
+					{{/foreach}}
+		  </table>
+		<div class="r_mar_top" align="right">
+		{{if $page>1}}
+		<a href='?c=vhostproduct&a=pageVhostByuser&page=0'>首页</a> 
+		<a href='?c=vhostproduct&a=pageVhostByuser&page={{$page-1}}'>上一页</a> 
+		{{else}}
+		首页 上一页 
+		{{/if}}
+		{{if $page!=$total_page}} 
+		<a href='?c=vhostproduct&a=pageVhostByuser&page={{$page+1}}'>下一页</a>
+		<a href='?c=vhostproduct&a=pageVhostByuser&page={{$total_page}}'>尾页</a>
+		{{else}}下一页 尾页
+		{{/if}} 
+		{{$page}}/{{$total_page}}&nbsp;
+		共计{{$count}}记录
 	</div>
 </div>
-</body>
-</html>
