--- a/user/view/default/session/login.html
+++ b/user/view/default/session/login.html
@@ -12,31 +12,26 @@ function ValidateForm()
 }
 </SCRIPT>
 <div class="right" align="center">
+	<div class="wid_ri r_mar_log" align="center">
 
-	<div class="wid_ri r_mar" align="center">
-		<div id="header"></div>
-		<div id="login">
-		<table width="50%" border="0" cellpadding="0" cellspacing="0">
-		<form action="?c=session&a=login" method=post name="form1" onSubmit='return ValidateForm()'>
-		  <tr>
-			<td colspan="2">用户控制面板</td>
-		  </tr>
-		  <tr>
-			<td>用户名：</td>
-			<td><input type="text" name="username" /></td>
-		  </tr>
-		  <tr>
-			<td>密码:</td>
-			<td><input type="password" name="passwd" /></td>
-		  </tr>
-		  <tr>
-			<td colspan="2"><input type="submit" value="登 录" /></td>
-		  </tr>
-		  </form>
-		</table>
-		
+				<form action="?c=session&a=login" method=post name="form1" onSubmit='return ValidateForm()'>
+				<table border="0" cellpadding="0" cellspacing="1" bgcolor="#E8E6E6">
+				  <tr>
+					<td colspan="2" align="left"><img src="{{$STATIC}}style/agent_log.jpg" /></td>
+				  </tr>
+				  <tr>
+					<td colspan="2" class="td_hg" align="center">用户名:&nbsp;<input type="text" name="username" /></td>
+				  </tr>
+				  <tr>
+					<td colspan="2" class="td_hg" align="center">&nbsp;密码:&nbsp;&nbsp;<input type="password" name="passwd"/></td>
+				  </tr>
+				  <tr>
+					<td colspan="2" class="td_hg" align="center"><input type="submit" value="登 录" /></td>
+				  </tr>
+				</table>
+	  </form>
 
-		</div>
+
 	</div>
 </div>
 
